fix(#928) - Limited the number of links to 10 and also added a flex-wrap

--- a/packages/home-spa/src/styles/main.scss
+++ b/packages/home-spa/src/styles/main.scss
@@ -229,6 +229,7 @@
     &__links {
         list-style: none;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         font-size: 20px;
         a {
